--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,10 @@ set( GLFW_LINK_LIBS libglfw.so )
 link_directories(/snap/gnome-3-26-1604/74/usr/lib/x86_64-linux-gnu/mesa/ /usr/local/lib/)
 
 #ADDING INCLUDE DIRECTORIES
-include_directories(/usr/local/include/)
+include_directories(/usr/local/include/ include)
 
-add_executable(geosim main.cpp glad.c)
+file(GLOB SOURCES "src/*")
+
+add_executable(geosim ${SOURCES})
 
 target_link_libraries(geosim ${PROJECT_LINK_LIBS} ${GLFW_LINK_LIBS} ${CMAKE_DL_LIBS})
